--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "webserver edamkar",
   "main": "index.js",
   "scripts": {
-    "start": "nodedemon index.js",
+    "start": "nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Akhdan Robbani",
@@ -12,6 +12,7 @@
   "dependencies": {
     "axios": "^1.4.0",
     "express": "^4.18.2",
+    "uuid": "^9.0.1",
     "ws": "^8.13.0"
   },
   "devDependencies": {
